step 4